// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Exit station button should be possible to activate button with Spacebar 1`] = `
<Home
  fareCharges={
    Object {
      "ANYWHERE_IN_ZONE_1": 2.5,
      "ANY_ONE_ZONE_OUTSIDE_ZONE_1": 2,
      "ANY_TWO_ZONES_EXCLUDING_ZONE_1": 2.25,
      "ANY_TWO_ZONES_INCLUDING_ZONE_1": 3,
      "BUS_JOURNEY": 1.8,
      "MORE_THAN_TWO_ZONES": 3.2,
      "TUBE_MAX_COST": 3.2,
    }
  }
>
  <div
    className="flex flex1 justify-between bg-gray-50 mb-6 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider overflow-hidden border-b border-gray-200 sm:rounded-lg"
  >
    <div
      className="topup text-lg"
    >
      <input
        className="mr-6 border-b border-gray-200 py-2 px-4"
        id="topup"
        name="topup"
        type="number"
      />
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="topup"
        onClick={[Function]}
      >
        Topup
      </button>
    </div>
    Wallet £
    0
  </div>
  <div
    className="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg min-h-full px-6 py-6"
  >
    <div
      className="max-w-xl"
    >
      <div
        className="flex justify-between border-b border-gray-200 py-3 mb-3"
      >
        <label>
          Travel type
        </label>
        <div
          className="travel-type"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            defaultValue="tube"
            id="travelType"
            name="travelType"
            onChange={[Function]}
          >
            <option
              value="tube"
            >
              Tube
            </option>
            <option
              value="bus"
            >
              Bus
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-between "
      >
        <label>
          Travel From
        </label>
        <div
          className="travel-from"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelFrom"
            name="travelFrom"
          >
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Holborn
            </option>
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  12,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Hammersmith
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Arsenal
            </option>
            <option
              value={
                Array [
                  3,
                ]
              }
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="startStationButton"
          onClick={[Function]}
        >
          Enter Station
        </button>
      </div>
      <div
        className="flex justify-between"
      >
        <label>
          Travel To
        </label>
        <div
          className="travel-to"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelTo"
            name="travelTo"
          >
            <option
              value={1}
            >
              Holborn
            </option>
            <option
              value={1}
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  1,
                  2,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={2}
            >
              Hammersmith
            </option>
            <option
              value={2}
            >
              Arsenal
            </option>
            <option
              value={3}
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end  border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="endStationButton"
          onClick={[Function]}
        >
          Exit Station
        </button>
      </div>
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="clearButton"
        onClick={[Function]}
      >
        Clear Exit
      </button>
    </div>
  </div>
</Home>
`;

exports[`Home Start station button should be possible to activate button with Spacebar 1`] = `
<Home
  fareCharges={
    Object {
      "ANYWHERE_IN_ZONE_1": 2.5,
      "ANY_ONE_ZONE_OUTSIDE_ZONE_1": 2,
      "ANY_TWO_ZONES_EXCLUDING_ZONE_1": 2.25,
      "ANY_TWO_ZONES_INCLUDING_ZONE_1": 3,
      "BUS_JOURNEY": 1.8,
      "MORE_THAN_TWO_ZONES": 3.2,
      "TUBE_MAX_COST": 3.2,
    }
  }
>
  <div
    className="flex flex1 justify-between bg-gray-50 mb-6 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider overflow-hidden border-b border-gray-200 sm:rounded-lg"
  >
    <div
      className="topup text-lg"
    >
      <input
        className="mr-6 border-b border-gray-200 py-2 px-4"
        id="topup"
        name="topup"
        type="number"
      />
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="topup"
        onClick={[Function]}
      >
        Topup
      </button>
    </div>
    Wallet £
    0
  </div>
  <div
    className="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg min-h-full px-6 py-6"
  >
    <div
      className="max-w-xl"
    >
      <div
        className="flex justify-between border-b border-gray-200 py-3 mb-3"
      >
        <label>
          Travel type
        </label>
        <div
          className="travel-type"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            defaultValue="tube"
            id="travelType"
            name="travelType"
            onChange={[Function]}
          >
            <option
              value="tube"
            >
              Tube
            </option>
            <option
              value="bus"
            >
              Bus
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-between "
      >
        <label>
          Travel From
        </label>
        <div
          className="travel-from"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelFrom"
            name="travelFrom"
          >
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Holborn
            </option>
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  12,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Hammersmith
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Arsenal
            </option>
            <option
              value={
                Array [
                  3,
                ]
              }
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="startStationButton"
          onClick={[Function]}
        >
          Enter Station
        </button>
      </div>
      <div
        className="flex justify-between"
      >
        <label>
          Travel To
        </label>
        <div
          className="travel-to"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelTo"
            name="travelTo"
          >
            <option
              value={1}
            >
              Holborn
            </option>
            <option
              value={1}
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  1,
                  2,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={2}
            >
              Hammersmith
            </option>
            <option
              value={2}
            >
              Arsenal
            </option>
            <option
              value={3}
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end  border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="endStationButton"
          onClick={[Function]}
        >
          Exit Station
        </button>
      </div>
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="clearButton"
        onClick={[Function]}
      >
        Clear Exit
      </button>
    </div>
  </div>
</Home>
`;

exports[`Home Start station button should be possible to activate button with Spacebar 2`] = `
<Home
  fareCharges={
    Object {
      "ANYWHERE_IN_ZONE_1": 2.5,
      "ANY_ONE_ZONE_OUTSIDE_ZONE_1": 2,
      "ANY_TWO_ZONES_EXCLUDING_ZONE_1": 2.25,
      "ANY_TWO_ZONES_INCLUDING_ZONE_1": 3,
      "BUS_JOURNEY": 1.8,
      "MORE_THAN_TWO_ZONES": 3.2,
      "TUBE_MAX_COST": 3.2,
    }
  }
>
  <div
    className="flex flex1 justify-between bg-gray-50 mb-6 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider overflow-hidden border-b border-gray-200 sm:rounded-lg"
  >
    <div
      className="topup text-lg"
    >
      <input
        className="mr-6 border-b border-gray-200 py-2 px-4"
        id="topup"
        name="topup"
        type="number"
      />
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="topup"
        onClick={[Function]}
      >
        Topup
      </button>
    </div>
    Wallet £
    0
  </div>
  <div
    className="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg min-h-full px-6 py-6"
  >
    <div
      className="max-w-xl"
    >
      <div
        className="flex justify-between border-b border-gray-200 py-3 mb-3"
      >
        <label>
          Travel type
        </label>
        <div
          className="travel-type"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            defaultValue="tube"
            id="travelType"
            name="travelType"
            onChange={[Function]}
          >
            <option
              value="tube"
            >
              Tube
            </option>
            <option
              value="bus"
            >
              Bus
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-between "
      >
        <label>
          Travel From
        </label>
        <div
          className="travel-from"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelFrom"
            name="travelFrom"
          >
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Holborn
            </option>
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  12,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Hammersmith
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Arsenal
            </option>
            <option
              value={
                Array [
                  3,
                ]
              }
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="startStationButton"
          onClick={[Function]}
        >
          Enter Station
        </button>
      </div>
      <div
        className="flex justify-between"
      >
        <label>
          Travel To
        </label>
        <div
          className="travel-to"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelTo"
            name="travelTo"
          >
            <option
              value={1}
            >
              Holborn
            </option>
            <option
              value={1}
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  1,
                  2,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={2}
            >
              Hammersmith
            </option>
            <option
              value={2}
            >
              Arsenal
            </option>
            <option
              value={3}
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end  border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="endStationButton"
          onClick={[Function]}
        >
          Exit Station
        </button>
      </div>
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="clearButton"
        onClick={[Function]}
      >
        Clear Exit
      </button>
    </div>
  </div>
</Home>
`;

exports[`Home Topup button should be possible to activate button with Spacebar 1`] = `
<Home
  fareCharges={
    Object {
      "ANYWHERE_IN_ZONE_1": 2.5,
      "ANY_ONE_ZONE_OUTSIDE_ZONE_1": 2,
      "ANY_TWO_ZONES_EXCLUDING_ZONE_1": 2.25,
      "ANY_TWO_ZONES_INCLUDING_ZONE_1": 3,
      "BUS_JOURNEY": 1.8,
      "MORE_THAN_TWO_ZONES": 3.2,
      "TUBE_MAX_COST": 3.2,
    }
  }
>
  <div
    className="flex flex1 justify-between bg-gray-50 mb-6 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider overflow-hidden border-b border-gray-200 sm:rounded-lg"
  >
    <div
      className="topup text-lg"
    >
      <input
        className="mr-6 border-b border-gray-200 py-2 px-4"
        id="topup"
        name="topup"
        type="number"
      />
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="topup"
        onClick={[Function]}
      >
        Topup
      </button>
    </div>
    Wallet £
    0
  </div>
  <div
    className="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg min-h-full px-6 py-6"
  >
    <div
      className="max-w-xl"
    >
      <div
        className="flex justify-between border-b border-gray-200 py-3 mb-3"
      >
        <label>
          Travel type
        </label>
        <div
          className="travel-type"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            defaultValue="tube"
            id="travelType"
            name="travelType"
            onChange={[Function]}
          >
            <option
              value="tube"
            >
              Tube
            </option>
            <option
              value="bus"
            >
              Bus
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-between "
      >
        <label>
          Travel From
        </label>
        <div
          className="travel-from"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelFrom"
            name="travelFrom"
          >
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Holborn
            </option>
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  12,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Hammersmith
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Arsenal
            </option>
            <option
              value={
                Array [
                  3,
                ]
              }
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="startStationButton"
          onClick={[Function]}
        >
          Enter Station
        </button>
      </div>
      <div
        className="flex justify-between"
      >
        <label>
          Travel To
        </label>
        <div
          className="travel-to"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelTo"
            name="travelTo"
          >
            <option
              value={1}
            >
              Holborn
            </option>
            <option
              value={1}
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  1,
                  2,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={2}
            >
              Hammersmith
            </option>
            <option
              value={2}
            >
              Arsenal
            </option>
            <option
              value={3}
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end  border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="endStationButton"
          onClick={[Function]}
        >
          Exit Station
        </button>
      </div>
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="clearButton"
        onClick={[Function]}
      >
        Clear Exit
      </button>
    </div>
  </div>
</Home>
`;

exports[`Home clear button should be possible to activate button with Spacebar 1`] = `
<Home
  fareCharges={
    Object {
      "ANYWHERE_IN_ZONE_1": 2.5,
      "ANY_ONE_ZONE_OUTSIDE_ZONE_1": 2,
      "ANY_TWO_ZONES_EXCLUDING_ZONE_1": 2.25,
      "ANY_TWO_ZONES_INCLUDING_ZONE_1": 3,
      "BUS_JOURNEY": 1.8,
      "MORE_THAN_TWO_ZONES": 3.2,
      "TUBE_MAX_COST": 3.2,
    }
  }
>
  <div
    className="flex flex1 justify-between bg-gray-50 mb-6 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider overflow-hidden border-b border-gray-200 sm:rounded-lg"
  >
    <div
      className="topup text-lg"
    >
      <input
        className="mr-6 border-b border-gray-200 py-2 px-4"
        id="topup"
        name="topup"
        type="number"
      />
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="topup"
        onClick={[Function]}
      >
        Topup
      </button>
    </div>
    Wallet £
    0
  </div>
  <div
    className="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg min-h-full px-6 py-6"
  >
    <div
      className="max-w-xl"
    >
      <div
        className="flex justify-between border-b border-gray-200 py-3 mb-3"
      >
        <label>
          Travel type
        </label>
        <div
          className="travel-type"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            defaultValue="tube"
            id="travelType"
            name="travelType"
            onChange={[Function]}
          >
            <option
              value="tube"
            >
              Tube
            </option>
            <option
              value="bus"
            >
              Bus
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-between "
      >
        <label>
          Travel From
        </label>
        <div
          className="travel-from"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelFrom"
            name="travelFrom"
          >
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Holborn
            </option>
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  12,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Hammersmith
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Arsenal
            </option>
            <option
              value={
                Array [
                  3,
                ]
              }
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="startStationButton"
          onClick={[Function]}
        >
          Enter Station
        </button>
      </div>
      <div
        className="flex justify-between"
      >
        <label>
          Travel To
        </label>
        <div
          className="travel-to"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelTo"
            name="travelTo"
          >
            <option
              value={1}
            >
              Holborn
            </option>
            <option
              value={1}
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  1,
                  2,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={2}
            >
              Hammersmith
            </option>
            <option
              value={2}
            >
              Arsenal
            </option>
            <option
              value={3}
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end  border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="endStationButton"
          onClick={[Function]}
        >
          Exit Station
        </button>
      </div>
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="clearButton"
        onClick={[Function]}
      >
        Clear Exit
      </button>
    </div>
  </div>
</Home>
`;

exports[`Home should render my component 1`] = `
<Fragment>
  <div
    className="flex flex1 justify-between bg-gray-50 mb-6 px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider overflow-hidden border-b border-gray-200 sm:rounded-lg"
  >
    <div
      className="topup text-lg"
    >
      <input
        className="mr-6 border-b border-gray-200 py-2 px-4"
        id="topup"
        name="topup"
        type="number"
      />
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="topup"
        onClick={[Function]}
      >
        Topup
      </button>
    </div>
    Wallet £
    0
  </div>
  <div
    className="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg min-h-full px-6 py-6"
  >
    <div
      className="max-w-xl"
    >
      <div
        className="flex justify-between border-b border-gray-200 py-3 mb-3"
      >
        <label>
          Travel type
        </label>
        <div
          className="travel-type"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            defaultValue="tube"
            id="travelType"
            name="travelType"
            onChange={[Function]}
          >
            <option
              value="tube"
            >
              Tube
            </option>
            <option
              value="bus"
            >
              Bus
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-between "
      >
        <label>
          Travel From
        </label>
        <div
          className="travel-from"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelFrom"
            name="travelFrom"
          >
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Holborn
            </option>
            <option
              value={
                Array [
                  1,
                ]
              }
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  12,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Hammersmith
            </option>
            <option
              value={
                Array [
                  2,
                ]
              }
            >
              Arsenal
            </option>
            <option
              value={
                Array [
                  3,
                ]
              }
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="startStationButton"
          onClick={[Function]}
        >
          Enter Station
        </button>
      </div>
      <div
        className="flex justify-between"
      >
        <label>
          Travel To
        </label>
        <div
          className="travel-to"
        >
          <select
            className="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
            id="travelTo"
            name="travelTo"
          >
            <option
              value={1}
            >
              Holborn
            </option>
            <option
              value={1}
            >
              Aldgate
            </option>
            <option
              value={
                Array [
                  1,
                  2,
                ]
              }
            >
              Earl’s Court
            </option>
            <option
              value={2}
            >
              Hammersmith
            </option>
            <option
              value={2}
            >
              Arsenal
            </option>
            <option
              value={3}
            >
              Wimbledon
            </option>
          </select>
        </div>
      </div>
      <div
        className="flex justify-end  border-b border-gray-200 py-3 mb-3"
      >
        <button
          className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
          id="endStationButton"
          onClick={[Function]}
        >
          Exit Station
        </button>
      </div>
      <button
        className="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
        id="clearButton"
        onClick={[Function]}
      >
        Clear Exit
      </button>
    </div>
  </div>
</Fragment>
`;
